Adding ordered list

--- a/README.org
+++ b/README.org
@@ -1,15 +1,13 @@
-#+TITLE: Tool configuration repo
+#+TITLE: Tool configuration
 #+STARTUP: showall
 
-
-* Symlink
 * Emacs
-** ln -s ./emacs/init.el ~/.emacs.d/init.el
+1. ln -s ./emacs/init.el ~/.emacs.d/init.el
 * vim
-** [[*https://github.com/VundleVim/Vundle.vim][Install vundle]]
-** ln -s ./vim/_vimrc ~/_vimrc
+1. [[*https://github.com/VundleVim/Vundle.vim][Install vundle]]
+2. ln -s ./vim/_vimrc ~/_vimrc
   
 * zsh
-** [[https://github.com/powerline/fonts][Install powerline font]] 
-** [[https://gist.github.com/derhuerst/12a1558a4b408b3b2b6e][Install zsh]]
-** ln -s ./zsh/.zshrc ~/.zshrc
+1. [[https://github.com/powerline/fonts][Install powerline font]] 
+2. [[https://gist.github.com/derhuerst/12a1558a4b408b3b2b6e][Install zsh]]
+3. ln -s ./zsh/.zshrc ~/.zshrc
