--- a/emacs/config.org
+++ b/emacs/config.org
@@ -118,6 +118,11 @@ Replace tabs by spaces
   (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
 #+END_SRC
 
+*** Store link
+    #+BEGIN_SRC emacs-lisp
+      (global-set-key (kbd "C-c l") 'org-store-link)
+    #+END_SRC
+
 *** TODO add more org mode configuration
 ** Auto complete
 *** Install helm
@@ -214,6 +219,17 @@ Replace tabs by spaces
         :config
         (helm-projectile-on))
     #+END_SRC
+
+** Parentheses completion
+Install the [[https://melpa.org/#/smartparens][smartparens package.]]
+#+BEGIN_SRC emacs-lisp
+  (use-package smartparens
+    :ensure t
+    :config
+    (add-hook 'org-mode-hook 'smartparens-mode)
+    (add-hook 'emacs-lisp-mode-hook 'smartparens-mode)
+    (add-hook 'elixir-mode-hook 'smartparens-mode))
+#+END_SRC
 
 * Keybinding
 ** Macos rebind
@@ -323,3 +339,13 @@ M-x try PACKAGE_NAME
 (use-package try
   :ensure t)
 #+END_SRC
+* Language support
+** Elixir language
+*** Install [[https://melpa.org/#/elixir-mode][elixir-mode package.]]
+#+BEGIN_SRC emacs-lisp
+  (use-package elixir-mode
+    :ensure t)
+
+#+END_SRC
+*** Auto parentheses
+    Smartparens is used for elixir [[*Parentheses completion][smartparens]]
