--- a/README.org
+++ b/README.org
@@ -17,7 +17,9 @@
 1. [[https://github.com/powerline/fonts][Install powerline font]]
 2. [[https://gist.github.com/derhuerst/12a1558a4b408b3b2b6e][Install zsh]]
 3. ln -s `pwd`.//zsh/.zshrc ~/.zshrc
-4. git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+4. git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+5. git clone https://github.com/zsh-users/zsh-autosuggestions ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
+6. git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
 
 * VScode
 1. [[https://github.com/shanalikhan/code-settings-sync][Install Settings Sync extension]]
